Open java.base/java.io
.. to allow com.yahoo.io.NativeIO to use reflective access on
   java.io.FileDescriptor.fd